examples/bad/01-02-porownanie-funkcji.gg
(\n: Int ~> n + 1) != 1